--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <body class="page">
     <header class="header section-size section-style">
-      <div class="header__logo">&lt;/HTML&gt;</div>
+      <a class="header__logo">&lt;/HTML&gt;</a>
       <h1 class="header__title">Закрывающий тег</h1>
 
       <nav class="theme-menu header__theme-menu">
@@ -60,7 +60,7 @@
           >
           <img
             src="./images/sign.jpg"
-            class="content__card-img sign"
+            class="content__card-img filter-saturate"
             alt="Фотография дорожного знака на фоне цветущего куста."
           />
         </div>
@@ -74,7 +74,7 @@
           берешь - и делаешь. Вот так и с этим курсом.
         </p>
         <div class="flex-wrapper">
-          <button class="card__icon-button">
+          <button class="card__icon-button" type="button">
             <svg
               width="39"
               height="36"
@@ -107,7 +107,7 @@
               />
             </svg>
           </button>
-          <button class="content__button card__like-button section-style">
+          <button type="button" class="content__button card__like-button section-style">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -121,7 +121,7 @@
           >
           <img
             src="./images/mini.jpg"
-            class="content__card-img mini"
+            class="content__card-img filter-grayscale"
             alt="Фотография минифигурок."
           />
         </div>
@@ -138,7 +138,7 @@
           точно знаешь, что маленькие шаги всегда приводят к результату.
         </p>
         <div class="flex-wrapper">
-          <button class="card__icon-button">
+          <button class="card__icon-button" type="button">
             <svg
               width="39"
               height="36"
@@ -171,7 +171,7 @@
               />
             </svg>
           </button>
-          <button class="content__button card__like-button section-style">
+          <button class="content__button card__like-button section-style" type="button">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -185,7 +185,7 @@
           >
           <img
             src="./images/gloomhaven.jpg"
-            class="content__card-img tabletop"
+            class="content__card-img filter-brightness"
             alt="Настольная игра."
           />
         </div>
@@ -202,7 +202,7 @@
           правильно (или лучше замечаешь свои ошибки).
         </p>
         <div class="flex-wrapper">
-          <button class="card__icon-button">
+          <button class="card__icon-button" type="button">
             <svg
               width="39"
               height="36"
@@ -235,7 +235,7 @@
               />
             </svg>
           </button>
-          <button class="content__button card__like-button section-style">
+          <button class="content__button card__like-button section-style" type="button">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -249,7 +249,7 @@
           >
           <img
             src="./images/text.jpg"
-            class="content__card-img text"
+            class="content__card-img filter-invert"
             alt="Фотография записей из тетради."
           />
         </div>
@@ -265,7 +265,7 @@
           приблизиться, если разобраться что к чему.
         </p>
         <div class="flex-wrapper">
-          <button class="card__icon-button">
+          <button class="card__icon-button" type="button">
             <svg
               width="39"
               height="36"
@@ -298,7 +298,7 @@
               />
             </svg>
           </button>
-          <button class="content__button card__like-button section-style">
+          <button class="content__button card__like-button section-style" type="button">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -310,7 +310,7 @@
           <span class="content__card-img-lable" aria-hidden="true">care</span>
           <img
             src="./images/sky.jpg"
-            class="content__card-img sky"
+            class="content__card-img filter-contrast"
             alt="Фотография моря и неба."
           />
         </div>
@@ -326,7 +326,7 @@
           делаем в командах. Маленький, но успех!
         </p>
         <div class="flex-wrapper">
-          <button class="card__icon-button">
+          <button class="card__icon-button" type="button">
             <svg
               width="39"
               height="36"
@@ -359,7 +359,7 @@
               />
             </svg>
           </button>
-          <button class="content__button card__like-button section-style">
+          <button class="content__button card__like-button section-style" type="button">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -373,7 +373,7 @@
           >
           <img
             src="./images/food.jpg"
-            class="content__card-img food"
+            class="content__card-img filter-mix-ssc"
             alt="Фотография приготовленного блюда - донбури."
           />
         </div>
@@ -389,7 +389,7 @@
           Как новый проект. Или вот миска донбури.
         </p>
         <div class="flex-wrapper">
-          <button class="card__icon-button">
+          <button class="card__icon-button" type="button">
             <svg
               width="39"
               height="36"
@@ -422,7 +422,7 @@
               />
             </svg>
           </button>
-          <button class="content__button card__like-button section-style">
+          <button class="content__button card__like-button section-style" type="button">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -436,7 +436,7 @@
           >
           <img
             src="./images/drink.jpg"
-            class="content__card-img drink"
+            class="content__card-img filter-mix-hue-blur"
             alt="Фотография коктейля."
           />
         </div>
@@ -451,7 +451,7 @@
           посидеть в баре с друзьями.
         </p>
         <div class="flex-wrapper">
-          <button class="card__icon-button">
+          <button class="card__icon-button" type="button">
             <svg
               width="39"
               height="36"
@@ -484,7 +484,7 @@
               />
             </svg>
           </button>
-          <button class="content__button card__like-button section-style">
+          <button class="content__button card__like-button section-style" type="button">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -498,7 +498,7 @@
           >
           <img
             src="./images/root.jpg"
-            class="content__card-img root"
+            class="content__card-img filter-mix-sepia-br"
             alt="Коробка с дополнением к настольной игре."
           />
         </div>
@@ -518,7 +518,7 @@
           чем вчера.
         </p>
         <div class="flex-wrapper">
-          <button class="card__icon-button">
+          <button class="card__icon-button" type="button">
             <svg
               width="39"
               height="36"
@@ -551,7 +551,7 @@
               />
             </svg>
           </button>
-          <button class="content__button card__like-button section-style">
+          <button class="content__button card__like-button section-style" type="button">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -567,7 +567,7 @@
           <svg viewBox="0 0 40 40">
             <use href="./svg/floppy.svg#floppy"></use>
           </svg>
-          <span class="button__text">Сохранить на память</span>
+          <span class="button__text">Сохранить на&nbsp;память</span>
         </button>
       </div>
 
